--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  
       
     </style>
-     <link media="all" rel="stylesheet" href="css/style.css" />
+     <link rel="stylesheet" href="css/style.css" />
 
   </head>
   <body>
