--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 
     </div>
     
-        <script type="text/javascript" src="js/js.js"></script>
+        <script type="text/javascript" src="js/nav.js"></script>
   </body>
 </html>
