--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
  
       
     </style>
-     <link rel="stylesheet" href="css/nav.css" />
+   
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
 
   </head>
   <body>
