--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
     </style>
    
-    <link rel="stylesheet" type="text/css" href="css/nav.css">
+    <link type="text/css" rel="stylesheet" href="css/nav.css">
 
   </head>
   <body>
